fixed white space

--- a/css/mobilestyle.css
+++ b/css/mobilestyle.css
@@ -1,10 +1,23 @@
 @media screen and (max-device-width: 500px), screen and (max-width:500px){
+   div{
+   	border: 1px solid red;
+   }
+
    body{
+   		height: 100%;
    		width: 400px;
 		max-width: 400px;
 		min-width: 400px;
+		margin-right: 0px;
+		padding-left: 0px;
    }
 
+   .homebody{
+	min-width: 400px;
+	width: 100%;
+	height: 100%;
+	
+	}
    #homelogo{
 	margin-left: -19px;
 	}
@@ -221,14 +234,25 @@
 	}
 	#leftfooter{
 		margin: 0;
+		margin-left: 40px;
 		padding: 5px;
 		float: none;
+		width: 300px;
+		max-width: 300px;
+		min-width: 300px;
 	}
+	
+
+	
 	#rightfooter{
 		display: none;
+	
 	}
-
+	.projectcontainer{
+	width: 400px;
+	}
 	.projectcontainer div{
+
 		display: block;
 	}
 	.projectbox{
@@ -237,9 +261,8 @@
 
 	#envelope{
   		width: 30px;
-  		height: 20px;
-  		
+  		height: 20px;	
   		float: left;
-}
+	}
 
 }
