--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 body {
 	min-width: 1280px;
-	
 	width: 100%;
 	height: 100%;
 	margin: 0px;
-	margin-right: -200px;
+	
 	padding: 0px;
 	padding-left: -20px;
 	font-family: 'Raleway', sans-serif;
